hphp/test/zend/good/Zend/tests/halt03.php.expectf

Fatal error: Keyword __HALT_COMPILER must be written in lowercase in %s/halt03.php on line 4
